appcenter-demo/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-podinfo-svc
spec:
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
